fixed naming scheme

--- a/ReactionTimeStudio/main_page.html
+++ b/ReactionTimeStudio/main_page.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Reaction Time Studio</title>
-        <link rel="stylesheet" href="../css/main_page.css">
+        <link rel="stylesheet" href="main_page.css">
     </head>
     <body id="main_page">
         <div class="main_page_container">
