added exit button to reaction time trainer page, version 1.1.1

--- a/ReactionTimeStudio/reaction_time_trainer_page.html
+++ b/ReactionTimeStudio/reaction_time_trainer_page.html
@@ -5,6 +5,10 @@
         <link rel="stylesheet" href="reaction_time_trainer_page.css"></link>
     </head>
     <body id="reaction_time_trainer_page">
+        <a href="main_page.html">
+            <button id="reaction_time_tester_page_exit_button">Exit</button>
+        </a>
+
         <div class="reaction_time_trainer_page_container">
             <strong><p id="reaction_time_trainer_page_tmp_message">Under Construction</p></strong>
         </div>
