added google analytics, small results screen change for reaction time tester page, version 1.1.3

--- a/ReactionTimeStudio/main_page.html
+++ b/ReactionTimeStudio/main_page.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-DBKHJQ8986"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-DBKHJQ8986');
+        </script>
+
         <meta charset="UTF-8">
+        <meta name="description" content="Test your reaction time and train it with Reaction Time Studio.">
         <title>Reaction Time Studio</title>
-        <link rel="stylesheet" href="main_page.css">
+        <link rel="stylesheet" href="../css/main_page.css">
     </head>
     <body id="main_page">
         <div class="main_page_container">
