--- a/ReactionTimeStudio/main_page.html
+++ b/ReactionTimeStudio/main_page.html
@@ -14,7 +14,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="Test your reaction time and train it with Reaction Time Studio.">
         <title>Reaction Time Studio</title>
-        <link rel="stylesheet" href="../css/main_page.css">
+        <link rel="stylesheet" href="main_page.css">
     </head>
     <body id="main_page">
         <div class="main_page_container">
