--- a/ReactionTimeStudio/reaction_time_trainer_page.html
+++ b/ReactionTimeStudio/reaction_time_trainer_page.html
@@ -12,7 +12,7 @@
         </script>
 
         <title>Reaction Time Trainer</title>
-        <link rel="stylesheet" href="../css/reaction_time_trainer_page.css"></link>
+        <link rel="stylesheet" href="reaction_time_trainer_page.css"></link>
     </head>
     <body id="reaction_time_trainer_page">
         <a href="main_page.html">
@@ -23,6 +23,6 @@
             <strong><p id="reaction_time_trainer_page_tmp_message">Under Construction</p></strong>
         </div>
 
-        <script type="module" src="../../compiled_ts/reaction_time_trainer_page.js"></script>
+        <script type="module" src="reaction_time_trainer_page.js"></script>
     </body>
 </html>
