--- a/ReactionTimeStudio/reaction_time_tester_page.html
+++ b/ReactionTimeStudio/reaction_time_tester_page.html
@@ -42,10 +42,10 @@
                 <input type="color" id="color_blue" value="#0096FF">
             </div>
             
-            <div id="reaction_time_tester_page_start_screen_decoy_gamemode_container">
+            <!-- <div id="reaction_time_tester_page_start_screen_decoy_gamemode_container">
                 <label for="reaction_time_tester_page_decoy_gamemode">Use decoys (doesn't work)</label>
                 <input type="checkbox" id="reaction_time_tester_page_decoy_gamemode">
-            </div>
+            </div> -->
 
             <button id="reaction_time_tester_page_start_screen_start_game_button">Start Game</button>
         </div>
