--- a/ReactionTimeStudio/reaction_time_tester_page.html
+++ b/ReactionTimeStudio/reaction_time_tester_page.html
@@ -12,7 +12,7 @@
         </script>
 
         <title>Reaction Time Tester</title>
-        <link rel="stylesheet" href="reaction_time_tester_page.css"></link>
+        <link rel="stylesheet" href="../css/reaction_time_tester_page.css"></link>
     </head>
     <body id="reaction_time_tester_page">
         <a href="main_page.html">
@@ -41,6 +41,21 @@
                 <label for="color_blue">Result / Misclick Screen: </label>
                 <input type="color" id="color_blue" value="#0096FF">
             </div>
+
+            <div id="reaction_time_tester_page_start_screen_user_biological_info">
+                <div id="reaction_time_tester_page_start_screen_user_age">
+                    <label for="user_age">Enter age: </label>
+                    <input type="number" id="user_age" placeholder="(optional)" min="0" step="1">
+                </div>
+                <div id="reaction_time_tester_page_start_screen_user_refresh_rate">
+                    <label for="user_refresh_rate">Enter monitor refresh rate (Hz): </label>
+                    <input type="number" id="user_refresh_rate" placeholder="(optional)" min="1" step="1">
+                </div>
+                <div id="reaction_time_tester_page_start_screen_user_monitor_response_time">
+                    <label for="user_monitor_response_time">Enter monitor response time (ms): </label>
+                    <input type="number" id="user_monitor_response_time" placeholder="(optional)" min="0" step="0.1">
+                </div>
+            </div>
             
             <!-- <div id="reaction_time_tester_page_start_screen_decoy_gamemode_container">
                 <label for="reaction_time_tester_page_decoy_gamemode">Use decoys (doesn't work)</label>
@@ -54,6 +69,6 @@
             <p id="reaction_time_tester_page_output"></p>
         </div>
 
-        <script type="module" src="reaction_time_tester_page.js"></script>
+        <script type="module" src="../../compiled_ts/reaction_time_tester_page.js"></script>
     </body>
 </html>
