--- a/ReactionTimeStudio/reaction_time_tester_page.html
+++ b/ReactionTimeStudio/reaction_time_tester_page.html
@@ -12,7 +12,7 @@
         </script>
 
         <title>Reaction Time Tester</title>
-        <link rel="stylesheet" href="../css/reaction_time_tester_page.css"></link>
+        <link rel="stylesheet" href="reaction_time_tester_page.css"></link>
     </head>
     <body id="reaction_time_tester_page">
         <a href="main_page.html">
@@ -69,6 +69,6 @@
             <p id="reaction_time_tester_page_output"></p>
         </div>
 
-        <script type="module" src="../../compiled_ts/reaction_time_tester_page.js"></script>
+        <script type="module" src="reaction_time_tester_page.js"></script>
     </body>
 </html>
