made site sizing relative to device width for better usability

--- a/ReactionTimeStudio/main_page.html
+++ b/ReactionTimeStudio/main_page.html
@@ -11,6 +11,7 @@
             gtag('config', 'G-DBKHJQ8986');
         </script>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
         <meta name="description" content="Test your reaction time and train it with Reaction Time Studio.">
         <title>Reaction Time Studio</title>
