--- a/ReactionTimeStudio/reaction_time_trainer_page.html
+++ b/ReactionTimeStudio/reaction_time_trainer_page.html
@@ -11,6 +11,8 @@
             gtag('config', 'G-DBKHJQ8986');
         </script>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title>Reaction Time Trainer</title>
         <link rel="stylesheet" href="reaction_time_trainer_page.css"></link>
     </head>
